--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.24.0",
     "next": "12.0.4",
+    "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-react": "^2.0.4",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
