--- a/.env.production
+++ b/.env.production
@@ -11,3 +11,4 @@
 name=PRODUCTION
 NEXT_PUBLIC_API_URL=http://makeup-api.herokuapp.com/api/v1/products.json?brand=dior
 NEXT_PUBLIC_LIST_API="http://makeup-api.herokuapp.com/api/v1/products.json?brand=dior"
+NEXT_PUBLIC_PHP_API="http://211.253.27.6:8033/api/v1"
