--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "jquery": "^3.6.0",
     "next": "12.0.4",
     "pm2": "^5.1.2",
     "react": "17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
@@ -20,5 +22,6 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4"
-  }
+  },
+  "proxy": "http://211.253.27.6:8033"
 }
