--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
+    "react-paginate": "^8.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "sharp": "^0.29.3"
