--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-cookies": "^0.1.1",
+    "react-daum-postcode": "^3.0.1",
     "react-dom": "17.0.2",
+    "react-naver-maps": "^0.0.13",
     "react-paginate": "^8.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
