도메인 변경

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 name=DEVELOPMENT
 NEXT_PUBLIC_API_URL=http://makeup-api.herokuapp.com/api/v1/products.json?brand=maybelline
 NEXT_PUBLIC_LIST_API="http://makeup-api.herokuapp.com/api/v1/products.json?brand=maybelline"
-NEXT_PUBLIC_PHP_API="http://3.38.192.212:8133/api/v1"
+NEXT_PUBLIC_PHP_API="http://next-app.cf:8133/api/v1"
