--- a/.env.production
+++ b/.env.production
@@ -11,4 +11,4 @@
 name=PRODUCTION
 NEXT_PUBLIC_API_URL=http://makeup-api.herokuapp.com/api/v1/products.json?brand=dior
 NEXT_PUBLIC_LIST_API="http://makeup-api.herokuapp.com/api/v1/products.json?brand=dior"
-NEXT_PUBLIC_PHP_API="http://3.38.192.212:8133/api/v1"
+NEXT_PUBLIC_PHP_API="http://next-app.cf:8133/api/v1"
