--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "jquery": "^3.6.0",
     "next": "12.0.4",
+    "next-session": "^4.0.4",
     "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-cookies": "^0.1.1",
@@ -20,7 +21,8 @@
     "react-paginate": "^8.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
