--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.6.0",
     "next": "12.0.4",
     "next-session": "^4.0.4",
+    "nprogress": "^0.2.0",
     "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
